add sell corrector